--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
-    background-color: #ffffff;
+    background-color: var(--cinza-claro);
 }
 
 header {
@@ -33,7 +33,7 @@ header {
     background-position: right;
     border-radius: 80px;
     width: 100%;
-    height: 606px;
+    height: 500px;
     padding: 40px;
     margin: 0 auto;
     position: relative;
@@ -41,9 +41,10 @@ header {
 
 .img-inicio {
     width: 100%;
-    max-width: 500px;
+    max-width: 380px;
     height: auto;
     margin-left: 30px;
+    border-radius: 15px;
 }
 
 .esquerda-conteudo {
