--- a/style.css
+++ b/style.css
@@ -78,11 +78,17 @@ h2 {
 }
 
 .galeria-img {
-    width: 250%;
-    height: 3250px;
-    object-fit: cover;
-    border-radius: 30px;
+    width: 100%;        /* A imagem ocupa toda a largura da coluna */
+    height: 250px;      /* Altura fixa de 250px */
+    object-fit: cover;  /* Ajuste para que a imagem preencha o espaço sem distorcer */
+    border-radius: 15px; /* Bordas arredondadas */
 }
+
+@media (max-width: 768px) {
+    .galeria-img {
+        width: 80%; /* Em telas menores, as imagens ficam 80% da largura */
+        height: 200px; /* Ajuste a altura para 200px em telas pequenas */
+    }
 
 .fundo-galeria {
     background: url('img/flor-bottom-direita.png') bottom right no-repeat;
@@ -162,4 +168,6 @@ h2 {
 
 .alto-contraste .fundo-galeria {
     background: none;
+}
+
 }
